fixed z-index of nav bar

--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -31,13 +31,17 @@ p.welcome {
 }
 
 .splash-bottom {
-  padding: 0 20px;
+  padding: 0 200px;
 }
 
 .listings-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.listings-container a {
+  text-decoration: none;
 }
 
 .card-container {
