--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,6 @@
 .nav-wrapper {
   position: fixed;
+  z-index: 100;
   width: 100%;
   display: flex;
   justify-content: space-between;
